--- a/src/scss/components/Header/cart.scss
+++ b/src/scss/components/Header/cart.scss
@@ -1,6 +1,6 @@
 @import '../../variables';
 
-.cart_block {
+.cart-block {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
