--- a/src/scss/components/Header/search.scss
+++ b/src/scss/components/Header/search.scss
@@ -1,6 +1,7 @@
 @import '../../variables';
 
-.search {
+.search-block {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
